# alix

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  NOTICE  README.md  RELEASING.md  codecov.yml  rustfmt.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  config.yml  feature_proposal.md
.github/workflows/: backend-drift.yml  book.yml  ci.yml  mobile-drift.yml  mobile-release.yml  pages.yml  release.yml
apps/mobile/: CHANGELOG.md  pubspec.yaml
apps/mobile/android/app/: build.gradle.kts
apps/mobile/assets/: sample.txt
apps/mobile/assets/decks/: basics.md  basics.txt  tutorial.txt
apps/mobile/assets/decks/sample-workspace/: alix.toml  capitals.md  capitals.txt  steps.md  steps.txt
apps/mobile/integration_test/: app_test.dart
apps/mobile/lib/: bootstrap.dart  exam_screen.dart  folder_browser.dart  inline_runs.dart  leave_guard.dart  main.dart  pairing_sheet.dart  picker_screen.dart  platform_access.dart  review_screen.dart  server_client.dart  settings_screen.dart  theme.dart  tutor_sheet.dart  walk_screen.dart
apps/mobile/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  (+1 more)
apps/mobile/linux/: CMakeLists.txt
apps/mobile/linux/flutter/: generated_plugins.cmake
apps/mobile/linux/runner/: my_application.cc
apps/mobile/rust/: Cargo.toml
apps/mobile/rust/src/: frb_generated.rs
apps/mobile/rust/src/api/: generate.rs  listing.rs  mod.rs  review.rs  simple.rs
apps/mobile/rust_builder/: pubspec.yaml
apps/mobile/rust_builder/android/: build.gradle  settings.gradle
apps/mobile/rust_builder/ios/: rust_lib_alix_mobile.podspec
apps/mobile/rust_builder/linux/: CMakeLists.txt
apps/mobile/rust_builder/macos/: rust_lib_alix_mobile.podspec
apps/mobile/rust_builder/windows/: CMakeLists.txt
apps/mobile/test/: bootstrap_test.dart  bridge_test.dart  exam_screen_test.dart  folder_browser_test.dart  generate_sheet_test.dart  hashcards_repro_test.dart  inline_runs_test.dart  pairing_sheet_test.dart  picker_row_features_test.dart  review_screen_ask_chip_test.dart  review_screen_crumb_strip_test.dart  review_screen_exam_chip_test.dart  review_screen_leave_test.dart  server_client_test.dart  theme_gallery_test.dart  theme_test.dart  tutor_sheet_test.dart  tutorial_deck_test.dart  walk_screen_test.dart
apps/mobile/test/support/: fake_server_client.dart
assets/: install-desktop.sh
assets/decks/: tutorial.md  tutorial.txt
assets/serve/: _brand.html  browse.html  review.html  theme.css  theme.js  walk.html
assets/web/: _head.html  alix-logo.js  review.html  theme.css  theme.js
assets/web/kids/: kids.html
docs/: API.md  traces.md
docs/book/: book.toml
docs/book/src/: 01-why-alix.md  01-why-flash.md  02-getting-started.md  03-the-deck-format.md  04-review-modes.md  05-scheduling.md  06-cloze-direction-images.md  07-directives.md  08-workspaces.md  09-dependencies.md  10-ask-claude.md  10-tutor.md  11-generating-decks.md  12-the-ai-exam.md  13-trace-decks.md  14-explore.md  15-the-web-app.md  16-configuration.md  17-command-reference.md  18-the-mobile-app.md  18-the-phone-app.md  19-pairing.md  README.md  SUMMARY.md  how-alix-was-made.md  how-flash-was-made.md
docs/examples/: keypress-to-grade.txt  math-rendering-showcase.md
docs/examples/rust-ownership/: ownership-move.txt
docs/examples/rust-ownership/assets/: 05.md
docs/examples/workspace-showcase/: alix.toml  ownership-move.md
docs/examples/workspace-showcase/assets/: 01.md  02.md  03.md  04.md
e2e/: README.md  global-setup.ts  package-lock.json  package.json  playwright.config.ts  prepare-fixtures.cjs
e2e/fixtures/: README.md  adult.toml  kids.toml
e2e/fixtures/decks/animals/: alix.toml  augment.json  cats.md  fronts.md  math.md  wild.md  wild.txt
e2e/shots/: capture.cjs
e2e/tests/: adult-math.spec.ts  adult-review.spec.ts  helpers.ts  kids-math.spec.ts  kids-multiline.spec.ts  kids-review.spec.ts
examples/: card-identity.txt  gh-review-prep.rs  keypress-to-grade.txt  understand.rs
scripts/: check-site-media.py  fmt-roadmap.py  frb-check.sh  heartbeat.sh  lint-js.js  mobile-run.sh  push-decks.sh  site-changelog.py  site-details.py  stats.py
site/: datenschutz.html  impressum.html  index.html  install.sh  slides.html
src/: answer.rs  ask.rs  assemble.rs  augment.rs  augment_ai.rs  browse.rs  cache.rs  calibrate.rs  card.rs  cardid.rs  choice.rs  cloze.rs  config.rs  deck.rs  dedup.rs  depth.rs  doctor.rs  exam.rs  explore.rs  generate.rs  icon.rs  import.rs  inline.rs  l1.rs  ladder.rs  level.rs  lib.rs  library.rs  listing.rs  main.rs  math.rs  parser.rs  picker.rs  preflight.rs  qr.rs  recent.rs  render.rs  review.rs  scheduler.rs  serve.rs  (+14 more)
src/backend/: claude.rs  codex.rs  copilot.rs  gemini.rs  health.rs  mod.rs
src/cli/: common.rs  deck.rs  doctor.rs  generate.rs  launch.rs  main.rs  profile.rs  progress.rs  share.rs
src/parser/: canonical.rs  checklist.rs  cloze.rs  frontmatter.rs  mod.rs
src/serve/: catalog.rs  contract.rs  dto.rs  jobs.rs  mod.rs  respond.rs  tests.rs
tests/: api.rs  backend_help.rs  calibrate.rs  cli.rs  eval.rs  example_decks.rs
tests/contracts/: AskDto.empty.json  AskDto.populated.json  AskDto.with_draft.json  AskInfoDto.json  AugmentDto.json  BrowseDto.json  CardDto.json  CardDto.math.json  CheckFeedbackDto.json  ChooseFeedbackDto.json  CreateCardResp.json  DeckDrawerDto.json  DeckListDto.json  DeckTopologyDto.json  DoctorDto.json  ExamDto.cooldown.json  ExamDto.results.json  GenerateDto.json  ImportDto.json  PairDto.json  ReceiveDto.json  RemoteAskDto.done.json  RemoteAskDto.note.json  RemoteAskDto.thinking.json  RemoteExamDto.answering.json  RemoteExamDto.idle.json  RemoteExamDto.remediated.json  RemoteExamDto.results.json  RemoteExamDto.trace_results.json  RemoteGenerateDto.done.json  RemoteGenerateDto.error.json  RemoteGenerateDto.generating.json  ResetDto.json  ShareDto.json  StateDto.review.json  StateDto.select.json  WalkDto.done.json  WalkDto.predict.json
(+14 files in other folders)
