[package]
name = "alix"
version = "0.3.0"
authors = ["Alex6323 <Al3k5@protonmail.com>"]
edition = "2024"
description = "A learning tool built for understanding, not just remembering."
keywords = ["spaced-repetition", "flashcards", "anki", "llm", "study"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Alex6323/alix"
homepage = "https://alix.study"
readme = "README.md"
categories = ["command-line-utilities"]
exclude = ["docs/", "site/", ".github/", "examples/", "apps/"]

[[bin]]
name = "alix"
path = "src/cli/main.rs"

# Declares `cfg(coverage_nightly)` as a known cfg (set by `cargo +nightly
# llvm-cov`, used by `#[cfg_attr(coverage_nightly, coverage(off))]` in a few
# places — see `src/lib.rs`) so a plain stable build/clippy doesn't warn
# "unexpected cfg" for it, which `-Dwarnings` (CI's `make check`) would
# otherwise turn into a hard error.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage_nightly)"] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
directories = "6"
getrandom = "0.2" # portable OS CSPRNG for the serve pairing token (already a transitive dep)
qrcodegen = "1.8.0" # zero-dep QR encoder for the terminal pairing QR (`--lan`)
rs-fsrs = { version = "1.2.1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.11"
thiserror = "2"
tiny_http = "0.12"
tempfile = "3" # scratch dirs for staging `alix share` and landing `alix receive`
toml = "1"
twox-hash = "2"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] } # the .zip archives of `alix share --zip` / `alix receive`

[dev-dependencies]

[lib]
name = "alix"
path = "src/lib.rs"

# examples/ is excluded from the published package (see `exclude` above), but
# `test = true` still makes plain `cargo test` build and run this example's
# `#[cfg(test)]` unit tests locally and in CI — otherwise `cargo clippy
# --all-targets` compiles them but `cargo test` never executes them.
[[example]]
name = "gh-review-prep"
test = true
