[package]
name = "alix"
version = "0.6.0"
authors = ["Alex6323 <Al3k5@protonmail.com>"]
edition = "2024"
description = "A learning tool built for understanding, not just remembering."
keywords = ["spaced-repetition", "flashcards", "anki", "llm", "study"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Alex6323/alix"
homepage = "https://alix.study"
readme = "README.md"
categories = ["command-line-utilities"]
# Allowlist (not a denylist): only what a crates.io consumer needs to build and
# read. Everything a build touches is `src/**` plus the `include_*!`d web assets
# (assets/web/**); README/CHANGELOG/licenses/NOTICE round out the published page.
# Dev-only dirs (tests/, e2e/, scripts/, docs/, site/, apps/, .github/, .claude/)
# and root dev files stay out by omission. Cargo.toml + Cargo.lock are implicit.
include = [
    "src/**",
    "assets/decks/**",
    "assets/web/**",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
    "/NOTICE",
]

[[bin]]
name = "alix"
path = "src/cli/main.rs"
required-features = ["full"]

# Declares `cfg(coverage_nightly)` as a known cfg (set by `cargo +nightly
# llvm-cov`, used by `#[cfg_attr(coverage_nightly, coverage(off))]` in a few
# places — see `src/lib.rs`) so a plain stable build/clippy doesn't warn
# "unexpected cfg" for it, which `-Dwarnings` (CI's `make check`) would
# otherwise turn into a hard error.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage_nightly)"] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"], optional = true }
directories = "6"
getrandom = "0.2" # portable OS CSPRNG: identity-token minting + the serve pairing token
qrcodegen = { version = "1.8.0", optional = true } # zero-dep QR encoder for the terminal pairing QR (`--lan`)
rs-fsrs = { version = "1.2.1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10" # SHA-256 for the published, third-party-reproducible card-id algorithm
strsim = "0.11"
thiserror = "2"
tiny_http = { version = "0.12", optional = true }
tempfile = "3" # scratch dirs for staging `alix share` and landing `alix receive`
toml = "1"
toml_edit = "0.25" # comment-preserving edits of alix.local.toml
twox-hash = "2"
unicode-normalization = "0.1" # NFC the card-id input so ids are stable across filesystems (macOS NFD vs Linux NFC)
yaml-rust2 = "0.11" # YAML frontmatter parsing
zip = { version = "8.6.0", default-features = false, features = ["deflate"], optional = true } # `alix share --zip` / `alix receive`

[features]
default = ["full"]
# `full` is every non-core capability: the web server, the AI backend and all its
# consumers, and sharing. `--no-default-features` builds the lean core the mobile
# client cross-compiles. See CONTRIBUTING.md.
full = ["dep:tiny_http", "dep:zip", "dep:qrcodegen", "dep:clap"]

[dev-dependencies]
proptest = "1" # property-test the freeze-forever card-id invariants (framing injectivity, control rejection)

[lib]
name = "alix"
path = "src/lib.rs"

# examples/ is excluded from the published package (see `exclude` above), but
# `test = true` still makes plain `cargo test` build and run this example's
# `#[cfg(test)]` unit tests locally and in CI — otherwise `cargo clippy
# --all-targets` compiles them but `cargo test` never executes them.
[[example]]
name = "gh-review-prep"
test = true
